--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Niconyx - Media & Marketing Solutions</title>
     
-    <link rel="icon" href="https://niconyx.com/assets/img/Niconyx.svg" type="image/svg+xml">
+    <link rel="icon" href="https://niconyx.com/logo/Niconyx.svg" type="image/svg+xml">
 
     <meta name="description" content="Niconyx Media delivers top-notch media services to elevate your brand. From content creation to media management and strategy, we help your business grow.">
     <meta property="og:title" content="Niconyx - Media & Marketing Solutions">
     <meta property="og:description" content="Partner with Niconyx to elevate your brand with expert media services, content creation, and strategic management.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://niconyx.com/">
-    <meta property="og:image" content="https://niconyx.com/assets/img/og-image-preview.png">
+    <meta property="og:image" content="https://niconyx.com/logo/img/og-image-preview.png">
 
     <style>
         /* Modern CSS with nesting, logical properties, and future-facing features */
@@ -290,7 +290,7 @@
         <div class="container">
             <nav>
                 <a href="#home" class="logo-link">
-                    <img src="https://niconyx.com/assets/img/Niconyx.svg" alt="Niconyx Logo">
+                    <img src="https://niconyx.com/logo/Niconyx.svg" alt="Niconyx Logo">
                 </a>
                 <div class="desktop-menu">
                     <a href="#services">Services</a>
